Add proxy shaded classifier and Maven launcher